samples/_failures_safe/1761370678_e473f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90ec6fb8.c: In function ‘main’:
./samples/SAFE/__tmp_90ec6fb8.c:154:13: error: expected ‘;’ at end of input
  154 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_90ec6fb8.c:154:5: error: expected declaration or statement at end of input
  154 |     return 0
      |     ^~~~~~
